--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -48,6 +48,11 @@ input {
 	margin-bottom: 3rem;
 	border: none;
 }
+input:focus,
+textarea:focus {
+	outline: none;
+	border: solid 3px var(--secondaryColor);
+}
 textarea {
 	width: 100%;
 	height: 14rem;
@@ -64,6 +69,7 @@ input[type="submit"] {
 	border: none;
 	color: var(--white);
 	font-size: 3rem;
+	cursor: pointer;
 }
 @media (min-width: 992px) {
 	label {
