--- a/src/components/UI/atoms/Video.css
+++ b/src/components/UI/atoms/Video.css
@@ -2,10 +2,12 @@
 	padding: 0;
 	margin: 0;
 	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 }
 .video {
 	width: 100%;
-	height: auto;
+	height: 100%;
+	object-fit: fill;
 }
