--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -107,3 +107,15 @@ input[type="submit"] {
 .paddding {
 	padding: 0 2rem;
 }
+
+.logo-container {
+	position: relative;
+}
+
+.logo-absolute {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+}
