--- a/src/components/UI/molecules/Footer.css
+++ b/src/components/UI/molecules/Footer.css
@@ -2,7 +2,7 @@ footer {
 	width: 100vw;
 	height: auto;
 	background-color: var(--secondaryColor);
-	padding: 2rem 0;
+	padding: 2rem 0rem;
 	margin-top: 3rem;
 
 	display: flex;
