--- a/src/components/UI/atoms/Service.css
+++ b/src/components/UI/atoms/Service.css
@@ -5,6 +5,13 @@
 	text-align: center;
 	color: white;
 	cursor: pointer;
+	display: flex;
+}
+.container-left {
+	justify-content: flex-start;
+}
+.container-right {
+	justify-content: flex-end;
 }
 @media (min-width: 992px) {
 	.service-container {
@@ -20,6 +27,7 @@
 	display: flex;
 	justify-content: flex-end;
 }
+/*
 .color-overlay {
 	width: 99%;
 	height: 89%;
@@ -38,17 +46,21 @@
 	border-bottom-left-radius: 17rem;
 	right: 0;
 }
+*/
 
 .text-position {
 	position: absolute;
 	top: 48%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -25%);
 	margin: 0;
 }
+
 .service-photo {
-	width: 100%;
+	width: auto;
+	max-width: 100%;
 	height: 90%;
+	object-fit: contain;
 }
 
 .service-container h4 {
@@ -61,6 +73,8 @@
 	text-decoration: underline;
 }
 
+/*
 .service-container:hover .color-overlay {
 	opacity: 0.6;
 }
+*/
