--- a/src/components/UI/atoms/icons/icons.css
+++ b/src/components/UI/atoms/icons/icons.css
@@ -15,3 +15,11 @@
 	color: var(--white);
 	stroke: var(--white);
 }
+
+.center-svg {
+	margin: auto;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
