--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -32,6 +32,15 @@
 		flex-direction: column;
 	}
 }
+
+.col-right {
+	margin-top: -5rem;
+}
+@media (min-width: 992px) {
+	.col-right {
+		margin-top: 0;
+	}
+}
 form {
 	width: 90%;
 }
