--- a/src/components/UI/molecules/Footer.css
+++ b/src/components/UI/molecules/Footer.css
@@ -2,21 +2,32 @@ footer {
 	width: 100vw;
 	height: auto;
 	background-color: var(--secondaryColor);
-	padding: 2rem 0rem;
+	padding: 2rem 1rem;
 	margin-top: 3rem;
+}
 
+.main-content {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
+.privacy-content {
+	display: flex;
+	justify-content: center;
+}
+
 footer h1 {
 	color: var(--white);
 }
+a {
+	color: var(--white);
+	font-size: 2rem;
+}
 @media (min-width: 992px) {
-	footer {
+	.main-content {
 		height: 20rem;
-		padding: 0 3rem;
+		padding: 0 10rem;
 		flex-direction: row;
 		justify-content: space-between;
 	}
