--- a/src/components/UI/molecules/navbar/NavBar.css
+++ b/src/components/UI/molecules/navbar/NavBar.css
@@ -9,7 +9,12 @@
 	padding: 0;
 }
 .NavBarPadding {
-	padding: 0 5rem;
+	padding: 0 1rem;
+}
+@media (min-width: 992px) {
+	.NavBarPadding {
+		padding: 0 10rem;
+	}
 }
 h1 span {
 	color: var(--secondaryColor);
